# revo2_description

./: package.xml
urdf/: revo2_left_hand.urdf.xacro  revo2_right_hand.urdf.xacro
